Fix image paths: simplify folder structure and remove spaces

--- a/index.html
+++ b/index.html
@@ -202,119 +202,119 @@
 
         <!-- ✦ Retouch ✦ -->
         <div class="art-card retouch-card" data-cat-rt="retouch">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/retouch-20260220T061044Z-1-001/retouch/1.jpg" alt="Portrait Retouch 1" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/retouch/1.jpg" alt="Portrait Retouch 1" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Portrait Retouch</span><span class="art-tag retouch-tag">Retouch</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="retouch">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/retouch-20260220T061044Z-1-001/retouch/2.jpg" alt="Portrait Retouch 2" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/retouch/2.jpg" alt="Portrait Retouch 2" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Skin Smoothing</span><span class="art-tag retouch-tag">Retouch</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="retouch">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/retouch-20260220T061044Z-1-001/retouch/3.jpg" alt="Portrait Retouch 3" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/retouch/3.jpg" alt="Portrait Retouch 3" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Beauty Edit</span><span class="art-tag retouch-tag">Retouch</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="retouch">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/retouch-20260220T061044Z-1-001/retouch/4.jpg" alt="Portrait Retouch 4" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/retouch/4.jpg" alt="Portrait Retouch 4" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Portrait Glow</span><span class="art-tag retouch-tag">Retouch</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="retouch">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/retouch-20260220T061044Z-1-001/retouch/7.jpg" alt="Portrait Retouch 7" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/retouch/7.jpg" alt="Portrait Retouch 7" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">High-End Retouch</span><span class="art-tag retouch-tag">Retouch</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="retouch">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/retouch-20260220T061044Z-1-001/retouch/9.jpg" alt="Portrait Retouch 9" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/retouch/9.jpg" alt="Portrait Retouch 9" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Editorial Retouch</span><span class="art-tag retouch-tag">Retouch</span></div>
         </div>
 
         <!-- ✦ Lifestyle & Product ✦ -->
         <div class="art-card retouch-card" data-cat-rt="lifestyle">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/lifestyle-20260220T061050Z-1-001/product editing-lifestyle/5.PNG" alt="Lifestyle 5" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/lifestyle/5.PNG" alt="Lifestyle 5" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Lifestyle Edit</span><span class="art-tag retouch-tag">Lifestyle</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="lifestyle">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/lifestyle-20260220T061050Z-1-001/product editing-lifestyle/6.PNG" alt="Lifestyle 6" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/lifestyle/6.PNG" alt="Lifestyle 6" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Product Edit</span><span class="art-tag retouch-tag">Lifestyle</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="lifestyle">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/lifestyle-20260220T061050Z-1-001/product editing-lifestyle/7.PNG" alt="Lifestyle 7" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/lifestyle/7.PNG" alt="Lifestyle 7" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Lifestyle Story</span><span class="art-tag retouch-tag">Lifestyle</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="lifestyle">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/lifestyle-20260220T061050Z-1-001/product editing-lifestyle/8.PNG" alt="Lifestyle 8" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/lifestyle/8.PNG" alt="Lifestyle 8" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Product Polish</span><span class="art-tag retouch-tag">Lifestyle</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="lifestyle">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/lifestyle-20260220T061050Z-1-001/product editing-lifestyle/9.PNG" alt="Lifestyle 9" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/lifestyle/9.PNG" alt="Lifestyle 9" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Color Enhancement</span><span class="art-tag retouch-tag">Lifestyle</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="lifestyle">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/lifestyle-20260220T061050Z-1-001/product editing-lifestyle/10.PNG" alt="Lifestyle 10" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/lifestyle/10.PNG" alt="Lifestyle 10" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Lifestyle Glow</span><span class="art-tag retouch-tag">Lifestyle</span></div>
         </div>
 
         <!-- ✦ Manipulation ✦ -->
         <div class="art-card retouch-card" data-cat-rt="manipulation">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/manipulation-20260220T060932Z-1-001/manipulation/12.PNG" alt="Manipulation 12" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/manipulation/12.PNG" alt="Manipulation 12" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Creative Composite</span><span class="art-tag retouch-tag">Manipulation</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="manipulation">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/manipulation-20260220T060932Z-1-001/manipulation/13.PNG" alt="Manipulation 13" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/manipulation/13.PNG" alt="Manipulation 13" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Fantasy Edit</span><span class="art-tag retouch-tag">Manipulation</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="manipulation">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/manipulation-20260220T060932Z-1-001/manipulation/14.PNG" alt="Manipulation 14" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/manipulation/14.PNG" alt="Manipulation 14" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Photo Art</span><span class="art-tag retouch-tag">Manipulation</span></div>
         </div>
 
         <!-- ✦ Photo Restoration ✦ -->
         <div class="art-card retouch-card" data-cat-rt="restoration">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/photo restoration-20260220T061046Z-1-001/photo restoration/15.PNG" alt="Restoration 15" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/restoration/15.PNG" alt="Restoration 15" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Photo Restore</span><span class="art-tag retouch-tag">Restoration</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="restoration">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/photo restoration-20260220T061046Z-1-001/photo restoration/16.PNG" alt="Restoration 16" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/restoration/16.PNG" alt="Restoration 16" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Vintage Restore</span><span class="art-tag retouch-tag">Restoration</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="restoration">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/photo restoration-20260220T061046Z-1-001/photo restoration/17.PNG" alt="Restoration 17" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/restoration/17.PNG" alt="Restoration 17" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Memory Saved</span><span class="art-tag retouch-tag">Restoration</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="restoration">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/photo restoration-20260220T061046Z-1-001/photo restoration/18.PNG" alt="Restoration 18" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/restoration/18.PNG" alt="Restoration 18" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Classic Revival</span><span class="art-tag retouch-tag">Restoration</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="restoration">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/photo restoration-20260220T061046Z-1-001/photo restoration/19.PNG" alt="Restoration 19" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/restoration/19.PNG" alt="Restoration 19" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Heritage Restore</span><span class="art-tag retouch-tag">Restoration</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="restoration">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/photo restoration-20260220T061046Z-1-001/photo restoration/20.PNG" alt="Restoration 20" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/restoration/20.PNG" alt="Restoration 20" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Photo Revival</span><span class="art-tag retouch-tag">Restoration</span></div>
         </div>
 
         <!-- ✦ Real Estate ✦ -->
         <div class="art-card retouch-card" data-cat-rt="realestate">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/real estate -20260220T061051Z-1-001/real estate/13_Hampton_Cir_004.jpg" alt="Real Estate 1" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/realestate/13_Hampton_Cir_004.jpg" alt="Real Estate 1" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Hampton Circle</span><span class="art-tag retouch-tag">Real Estate</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="realestate">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/real estate -20260220T061051Z-1-001/real estate/6_Jason_Ln_001.jpg" alt="Real Estate 2" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/realestate/6_Jason_Ln_001.jpg" alt="Real Estate 2" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Jason Lane</span><span class="art-tag retouch-tag">Real Estate</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="realestate">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/real estate -20260220T061051Z-1-001/real estate/6_Jason_Ln_037.jpg" alt="Real Estate 3" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/realestate/6_Jason_Ln_037.jpg" alt="Real Estate 3" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Interior Edit</span><span class="art-tag retouch-tag">Real Estate</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="realestate">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/real estate -20260220T061051Z-1-001/real estate/6_Jason_Ln_115.jpg" alt="Real Estate 4" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/realestate/6_Jason_Ln_115.jpg" alt="Real Estate 4" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Property Shot</span><span class="art-tag retouch-tag">Real Estate</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="realestate">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/real estate -20260220T061051Z-1-001/real estate/Image 1.jpg" alt="Real Estate 5" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/realestate/Image 1.jpg" alt="Real Estate 5" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Sky Replacement</span><span class="art-tag retouch-tag">Real Estate</span></div>
         </div>
         <div class="art-card retouch-card" data-cat-rt="realestate">
-          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/real estate -20260220T061051Z-1-001/real estate/Image 2.jpg" alt="Real Estate 6" class="art-photo" /></div>
+          <div class="art-img-wrap"><img src="Retouch Portfolio/portfolio/realestate/Image 2.jpg" alt="Real Estate 6" class="art-photo" /></div>
           <div class="art-info retouch-info"><span class="art-title">Exterior Polish</span><span class="art-tag retouch-tag">Real Estate</span></div>
         </div>
 
